--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
     "configText": "dude",
+    "infoWindow": {
+        "width": 275,
+        "height": 600
+    },
     "feedbackUrl": "http://localhost:24900/FeedbackService.svc",
     "editor": {
         "createOptions": {
@@ -51,6 +55,7 @@
         "4" : "Close",
         "0" : "Reject"
     },
+
     "FeedbackWorkflow": {
         "0":["4"],
         "1":["4"],
