--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Demo",
+  "name": "GeoEvent Processor SteamLayer",
   "platform": "HTML",
   "version": "0.0.1",
   "author": "Esri R&D Center Beijing",
