--- a/config.json
+++ b/config.json
@@ -6,6 +6,9 @@
   },
   "cookie": "userExtent",
   "feedbackUrl": "http://74.216.225.66/MyApplication/FeedbackService.svc",
+  "communityUrl": "http://gfx.esri.ca/arcgis/rest/services/Communities/Contributors",
+  "printTaskUrl": "http://74.216.225.66/arcgis/rest/services/observation/GPServer/Observe",
+  "imageryLayerUrl": "http://server.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer",
   "editor": {
     "createOptions": {
       "polylineDrawTools": [
